# qtex

./: .gitignore  MANIFEST.in  setup.cfg
.github/workflows/: publish-pypi.yml
