[metadata]
name = qpytexi
version = 0.1.6
author = Khris Griffis, Ph.D.
author_email = khris.griffis.phd@gmail.com
description = A Python package for generating LaTeX documents with Python integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Khlick/qpytexi
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Topic :: Education :: Testing
    Topic :: Text Processing :: Markup :: LaTeX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=2.0.0
    matplotlib>=3.8.0
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
qpytexi = 
    templates/*.tex

[options.entry_points]
console_scripts =
    qtex = qpytexi.cli:main